--- a/octopress/_sass/partials/_sharing.scss
+++ b/octopress/_sass/partials/_sharing.scss
@@ -3,6 +3,10 @@
     padding: { top: 1em; left: 0; }
     background: $img-border top left repeat-x;
   }
+  & > *,
+  .fb_iframe_widget > span {
+    vertical-align: top !important;
+  }
 }
 
 #fb-root { display: none; }
